--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
   background-image: url("http://i0.kym-cdn.com/photos/images/facebook/001/207/210/b22.jpg");
+  background-repeat: no-repeat;
 }
 
